--- a/.classpath
+++ b/.classpath
@@ -6,17 +6,12 @@
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="lib" path="lib/j2ee/activation.jar"/>
-	<classpathentry kind="lib" path="lib/j2ee/mail.jar"/>
 	<classpathentry kind="lib" path="lib/j2ee/jdbc2_0-stdext.jar"/>
-	<classpathentry kind="lib" path="lib/j2ee/jta.jar"/>
 	<classpathentry kind="lib" path="environment/local/jmagick.jar"/>
-	<classpathentry kind="lib" path="lib/jdbc/postgresql-8.1-408.jdbc3.jar"/>
 	<classpathentry kind="lib" path="lib/jmf/jmf-2.1.1e.jar"/>
 	<classpathentry kind="lib" path="lib/swing-layout-1.0.3.jar"/>
-	<classpathentry kind="lib" path="lib/jakarta-commons/commons-httpclient-3.1.jar" sourcepath="lib/jakarta-commons/commons-httpclient-3.1-src.jar"/>
-	<classpathentry kind="lib" path="lib/spring/spring-test.jar" sourcepath="lib/spring/spring-test-sources.jar"/>
-	<classpathentry kind="lib" path="lib/junit/junit-4.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0"/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=matte&amp;ivyXmlPath=ivy.xml&amp;confs=compile%2Ctest&amp;ivySettingsPath=lib%2Fivysettings.xml&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=matte&amp;ivyXmlPath=ivy.xml&amp;confs=runtime&amp;ivySettingsPath=lib%2Fivysettings.xml&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
