--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,6 @@
 	<classpathentry kind="lib" path="lib/jmf/jmf-2.1.1e.jar"/>
 	<classpathentry kind="lib" path="lib/swing-layout-1.0.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0"/>
-	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=matte&amp;ivyXmlPath=ivy.xml&amp;confs=compile%2Ctest&amp;ivySettingsPath=lib%2Fivysettings.xml&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
-	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=matte&amp;ivyXmlPath=ivy.xml&amp;confs=runtime&amp;ivySettingsPath=lib%2Fivysettings.xml&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=matte&amp;ivyXmlPath=ivy.xml&amp;confs=runtime%2Ctest&amp;ivySettingsPath=lib%2Fivysettings.xml&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
