--- a/ivy.xml
+++ b/ivy.xml
@@ -15,7 +15,9 @@
 		<dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="runtime"/>
 		
 		<!-- Utilities -->
-		<dependency org="net.sf.ehcache" name="ehcache" rev="1.3.0" conf="runtime"/>
+		<dependency org="net.sf.ehcache" name="ehcache" rev="1.3.0" conf="compile,runtime">
+			<artifact name="ehcache"/>
+		</dependency>
 		<dependency org="gnu-regexp" name="gnu-regexp" rev="1.1.4" conf="compile,runtime"/>
 		<dependency org="com.drewnoakes" name="metadata-extractor" rev="2.6.2" conf="compile,runtime"/>
 		<dependency org="javax.activation" name="activation" rev="1.1.1"  conf="compile,runtime"/>
@@ -76,8 +78,12 @@
 		
 		<!-- JDBC -->
 		<dependency org="javax.transaction" name="jta" rev="1.0.1B" conf="runtime"/>
-		<dependency org="org.hibernate" name="hibernate" rev="3.2.6.ga" conf="compile,runtime"/>
-		<dependency org="org.apache.derby" name="derby" rev="10.8.2.2" conf="test,demo-tomcat,jdbc"/>
+		<dependency org="org.hibernate" name="hibernate" rev="3.2.6.ga" conf="compile,runtime">
+			<exclude module="ehcache"/>
+		</dependency>
+		<dependency org="org.apache.derby" name="derby" rev="10.8.3.0" conf="test,demo-tomcat,jdbc">
+			<artifact name="derby"/>
+		</dependency>
 		<dependency org="mysql" name="mysql-connector-java" rev="5.1.18" conf="test,jdbc"/>
 		<dependency org="postgresql" name="postgresql" rev="9.1-901-1.jdbc4" conf="test,jdbc"/>
 		
@@ -87,12 +93,28 @@
 		</dependency>
 		
 		<!-- Spring -->
-		<dependency org="org.springframework" name="spring-aop" rev="2.5.6.SEC03" conf="compile,runtime"/>
-		<dependency org="org.springframework" name="spring-context" rev="2.5.6.SEC03" conf="compile,runtime"/>
-		<dependency org="org.springframework" name="spring-context-support" rev="2.5.6.SEC03" conf="compile,runtime"/>
-		<dependency org="org.springframework" name="spring-core" rev="2.5.6.SEC03" conf="compile,runtime"/>
-		<dependency org="org.springframework" name="spring-orm" rev="2.5.6.SEC03" conf="compile,runtime"/>
-		<dependency org="org.springframework" name="spring-webmvc" rev="2.5.6.SEC03" conf="compile,runtime"/>
+		<dependency org="org.springframework" name="spring-aop" rev="2.5.6.SEC03" conf="compile,runtime">
+			<artifact name="spring-aop"/>
+		</dependency>
+		<dependency org="org.springframework" name="spring-context" rev="2.5.6.SEC03" conf="compile,runtime">
+			<artifact name="spring-context"/>
+		</dependency>
+		<dependency org="org.springframework" name="spring-context-support" rev="2.5.6.SEC03" conf="compile,runtime">
+			<artifact name="spring-context-support"/>
+		</dependency>
+		<dependency org="org.springframework" name="spring-core" rev="2.5.6.SEC03" conf="compile,runtime">
+			<artifact name="spring-core"/>
+		</dependency>
+		<dependency org="org.springframework" name="spring-jdbc" rev="2.5.6.SEC03" conf="compile,runtime">
+			<artifact name="spring-jdbc"/>
+		</dependency>
+		<dependency org="org.springframework" name="spring-orm" rev="2.5.6.SEC03" conf="compile,runtime">
+			<artifact name="spring-orm"/>
+		</dependency>
+		<dependency org="org.springframework" name="spring-webmvc" rev="2.5.6.SEC03" conf="compile,runtime">
+			<artifact name="spring-webmvc"/>
+		</dependency>
+		
 		
 		<!-- Web runtime -->
 		<dependency org="com.sun.mail" name="javax.mail" rev="1.4.4" conf="compile"/>
@@ -108,12 +130,16 @@
 		<dependency org="org.apache.ws.commons.axiom" name="axiom-impl" rev="1.2.9" conf="compile,runtime">
 			<artifact name="axiom-impl"/>
 		</dependency>
-		<dependency org="org.springframework.ws" name="spring-ws-core" rev="1.5.10" conf="compile,runtime"/>
+		<dependency org="org.springframework.ws" name="spring-ws-core" rev="1.5.10" conf="compile,runtime">
+			<exclude org="org.springframework"/>
+		</dependency>
 		<dependency org="org.springframework.ws" name="spring-ws-core-tiger" rev="1.5.10" conf="compile,runtime">
 			<artifact name="spring-ws-core-tiger"/>
+			<exclude org="org.springframework"/>
 		</dependency>
 		<dependency org="org.springframework.ws" name="spring-ws-security" rev="1.5.10" conf="compile,runtime">
 			<artifact name="spring-ws-security"/>
+			<exclude org="org.springframework"/>
 		</dependency>
 		<dependency org="org.apache.santuario" name="xmlsec" rev="2.0.2" conf="runtime"/>
 		<dependency org="org.apache.ws.security" name="wss4j" rev="1.5.11" conf="runtime"/>
@@ -141,6 +167,7 @@
 		<exclude module="jaxrpc-api"/>
 		<exclude module="jaxws-api"/>
 		<exclude module="jsr173_api"/>
+		<exclude module="spring"/>
 		<exclude module="woodstox-core-asl"/>
 		<exclude module="xalan"/>
 		<exclude module="xmldsig"/>
