--- a/ivy.xml
+++ b/ivy.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0">
 	<info organisation="Matte" module="Web"/>
-	<configurations>
+	<configurations defaultconf="compile,runtime">
 		<conf name="compile" visibility="public" description="Build dependencies"/>
 		<conf name="runtime" visibility="public" description="Matte"/>
 		<conf name="test" visibility="private" description="unit testing" extends="compile"/>
 		<conf name="demo-tomcat" visibility="private" description="utilities needed for demo"/>
 		<conf name="jdbc" visibility="private" description="JDBC drivers for bin release"/>
 	</configurations>
-	<dependencies defaultconfmapping="jdbc->runtime(default);demo-tomcat->runtime(default);test->runtime(default);runtime->runtime(default);compile->compile(default)">
+	<dependencies defaultconfmapping="runtime->default(runtime);compile->default(compile);test->runtime(default);jdbc->runtime(default);demo-tomcat->runtime(default)">
+		
+		<override module="xml-apis" rev="1.4.01"/>
 		
 		<!-- Logging -->
 		<dependency org="log4j" name="log4j" rev="1.2.16" conf="compile,runtime"/>
-		<dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="runtime"/>
+		<dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="compile,runtime"/>
 		
 		<!-- Utilities -->
 		<dependency org="net.sf.ehcache" name="ehcache" rev="1.3.0" conf="compile,runtime">
 			<artifact name="ehcache"/>
 		</dependency>
 		<dependency org="gnu-regexp" name="gnu-regexp" rev="1.1.4" conf="compile,runtime"/>
-		<dependency org="com.drewnoakes" name="metadata-extractor" rev="2.6.2" conf="compile,runtime"/>
 		<dependency org="javax.activation" name="activation" rev="1.1.1"  conf="compile,runtime"/>
-		<dependency org="asm" name="asm" rev="2.2.3" conf="compile,runtime"/>
 		<dependency org="cglib" name="cglib" rev="2.2.2" conf="compile,runtime"/>
-		<dependency org="org.bouncycastle" name="bcprov-jdk14" rev="1.43" conf="runtime"/>
-		<dependency org="rhino" name="js" rev="1.7R2" conf="runtime"/>
+		<dependency org="org.bouncycastle" name="bcprov-jdk14" rev="1.43" conf="compile,runtime"/>
+		<dependency org="rhino" name="js" rev="1.7R2" conf="compile,runtime"/>
 
 		<!-- Apache Commons -->
 		<dependency org="commons-beanutils" name="commons-beanutils" rev="1.8.3" conf="compile,runtime"/>
@@ -32,18 +32,21 @@
 			<artifact name="commons-codec"/>
 		</dependency>
 		<dependency org="commons-collections" name="commons-collections" rev="3.2.1" conf="compile,runtime"/>
-		<dependency org="commons-el" name="commons-el" rev="1.0" conf="runtime"/>
-		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.2.2" conf="runtime,test"/>
+		<dependency org="commons-el" name="commons-el" rev="1.0" conf="compile,runtime"/>
+		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.2.2" conf="compile,runtime"/>
 		<dependency org="commons-httpclient" name="commons-httpclient" rev="3.1" conf="compile">
 			<artifact name="commons-httpclient"/>
 		</dependency>
-		<dependency org="commons-io" name="commons-io" rev="1.4" conf="runtime,test"/>
-		<dependency org="commons-lang" name="commons-lang" rev="2.2" conf="runtime"/>
-		<dependency org="commons-pool" name="commons-pool" rev="1.2" conf="runtime"/>
+		<dependency org="commons-io" name="commons-io" rev="1.4" conf="compile,runtime"/>
+		<dependency org="commons-lang" name="commons-lang" rev="2.2" conf="compile,runtime"/>
+		<dependency org="commons-pool" name="commons-pool" rev="1.2" conf="compile,runtime"/>
 		
 		<!-- JAXB, XML -->
+		<dependency org="xml-apis" name="xml-apis" rev="1.4.01" conf="compile,runtime">
+			<artifact name="xml-apis"/>
+		</dependency>
 		<dependency org="xerces" name="xercesImpl" rev="2.11.0" conf="compile,runtime"/>
-		<dependency org="dom4j" name="dom4j" rev="1.6.1" conf="runtime"/>
+		<dependency org="dom4j" name="dom4j" rev="1.6.1" conf="compile,runtime"/>
 		<dependency org="net.sf.saxon" name="Saxon-HE" rev="9.6.0-3" conf="compile,runtime">
     		<artifact name="Saxon-HE" type="jar" />
 		</dependency>
@@ -54,7 +57,7 @@
 		<dependency org="org.jvnet.hyperjaxb2" name="hyperjaxb2-core" rev="0.6.5" conf="compile,runtime">
 			<exclude org="net.sf.saxon"/>
 		</dependency>
-		<dependency org="org.apache.ws.commons.schema" name="XmlSchema" rev="1.4.7" conf="runtime"/>
+		<dependency org="org.apache.ws.commons.schema" name="XmlSchema" rev="1.4.7" conf="compile,runtime"/>
 		
 		<!-- Media support -->
 		<dependency org="batik" name="batik-parser" rev="1.6-1" conf="compile,runtime"/>
@@ -64,9 +67,11 @@
 		<dependency org="org.im4java" name="im4java" rev="1.2.0" conf="compile,runtime">
 			<artifact name="im4java"/>
 		</dependency>
-		<dependency org="org.opensaml" name="opensaml" rev="1.1" conf="runtime">
+		<dependency org="org.opensaml" name="opensaml" rev="1.1" conf="compile,runtime">
 			<artifact name="opensaml"/>
 		</dependency>
+		<dependency org="com.googlecode.mp4parser" name="isoparser" rev="1.0.5.4" conf="runtime,test"/>
+		<dependency org="com.drewnoakes" name="metadata-extractor" rev="2.6.2" conf="runtime,test"/>
 		
 		<!-- Lucene -->
 		<dependency org="org.apache.lucene" name="lucene-core" rev="2.2.0" conf="compile,runtime">
@@ -77,7 +82,7 @@
 		</dependency>
 		
 		<!-- JDBC -->
-		<dependency org="javax.transaction" name="jta" rev="1.0.1B" conf="runtime"/>
+		<dependency org="javax.transaction" name="jta" rev="1.0.1B" conf="compile,runtime"/>
 		<dependency org="org.hibernate" name="hibernate" rev="3.2.6.ga" conf="compile,runtime">
 			<exclude module="ehcache"/>
 		</dependency>
@@ -117,8 +122,11 @@
 		
 		
 		<!-- Web runtime -->
-		<dependency org="com.sun.mail" name="javax.mail" rev="1.4.4" conf="compile"/>
+		<dependency org="javax.mail" name="mail" rev="1.4.7" conf="compile">
+			<artifact name="mail"/>
+		</dependency>
 		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="compile,runtime"/>
+		<dependency org="org.apache.taglibs" name="taglibs-standard-impl" rev="1.2.1" conf="runtime" />
 		<dependency org="javax.servlet.jsp" name="jsp-api" rev="2.1" conf="compile">
 			<artifact name="jsp-api"/>
 		</dependency>
@@ -141,10 +149,12 @@
 			<artifact name="spring-ws-security"/>
 			<exclude org="org.springframework"/>
 		</dependency>
-		<dependency org="org.apache.santuario" name="xmlsec" rev="2.0.2" conf="runtime"/>
-		<dependency org="org.apache.ws.security" name="wss4j" rev="1.5.11" conf="runtime"/>
-		<dependency org="com.sun.xml.wss" name="xws-security_jaxrpc" rev="2.0-FCS" conf="runtime">
+		<dependency org="org.apache.santuario" name="xmlsec" rev="2.0.2" conf="compile,runtime"/>
+		<dependency org="org.apache.ws.security" name="wss4j" rev="1.5.11" conf="compile,runtime"/>
+		<dependency org="com.sun.xml.wss" name="xws-security_jaxrpc" rev="2.0-FCS" conf="compile,runtime">
+			<exclude module="activation"/>
 			<exclude module="jaxb-api"/>
+    		<exclude module="mail"/>
 		</dependency>
 		
 		<!-- Unit test support -->
@@ -154,9 +164,12 @@
 		</dependency>
 		<dependency org="org.subethamail" name="subethasmtp" rev="3.1.6" conf="test">
     		<artifact name="subethasmtp" type="jar" />
+    		<exclude module="mail"/>
 		</dependency>
 		<dependency org="org.mortbay.jetty" name="jetty" rev="6.1.26" conf="test">
     		<artifact name="jetty" type="jar" />
+    		<exclude module="servlet-api"/>
+    		<exclude module="junit"/>
 		</dependency>
 		
 		<!-- Global excludes -->
@@ -167,9 +180,11 @@
 		<exclude module="jaxrpc-api"/>
 		<exclude module="jaxws-api"/>
 		<exclude module="jsr173_api"/>
+		<exclude module="slf4j-api"/>
 		<exclude module="spring"/>
 		<exclude module="woodstox-core-asl"/>
 		<exclude module="xalan"/>
 		<exclude module="xmldsig"/>
+		<exclude module="xmlParserAPIs"/>
 	</dependencies>
 </ivy-module>
