Explicitly cast to REAL, because in Derby avg() does not do this implicitly.

--- a/src/META-INF/RatingAverageBrowseModePlugin.properties
+++ b/src/META-INF/RatingAverageBrowseModePlugin.properties
@@ -41,7 +41,7 @@ inner join ( \
 on item.itemid = shared.sitemid \
 inner join ( \
 	select rating.mediaitem_userrating_hjid as ritemid, \
-		avg(rating.rating) as avgrating \
+		avg(CAST(rating.rating AS REAL)) as avgrating \
 	from media_item_rating rating, media_item item \
 	where rating.mediaitem_userrating_hjid = item.itemid \
 	group by rating.mediaitem_userrating_hjid \
@@ -80,7 +80,7 @@ inner join ( \
 on item.itemid = shared.sitemid \
 inner join ( \
 	select rating.mediaitem_userrating_hjid as ritemid, \
-		avg(rating.rating) as avg_rating \
+		avg(CAST(rating.rating AS REAL)) as avg_rating \
 	from media_item_rating rating, media_item item \
 	where rating.mediaitem_userrating_hjid = item.itemid \
 	group by rating.mediaitem_userrating_hjid \
