--- a/ivy.xml
+++ b/ivy.xml
@@ -98,25 +98,25 @@
 		</dependency>
 		
 		<!-- Spring -->
-		<dependency org="org.springframework" name="spring-aop" rev="2.5.6.SEC03" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-aop" rev="3.2.12.RELEASE" conf="compile,runtime">
 			<artifact name="spring-aop"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-context" rev="2.5.6.SEC03" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-context" rev="3.2.12.RELEASE" conf="compile,runtime">
 			<artifact name="spring-context"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-context-support" rev="2.5.6.SEC03" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-context-support" rev="3.2.12.RELEASE" conf="compile,runtime">
 			<artifact name="spring-context-support"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-core" rev="2.5.6.SEC03" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-core" rev="3.2.12.RELEASE" conf="compile,runtime">
 			<artifact name="spring-core"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-jdbc" rev="2.5.6.SEC03" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-jdbc" rev="3.2.12.RELEASE" conf="compile,runtime">
 			<artifact name="spring-jdbc"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-orm" rev="2.5.6.SEC03" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-orm" rev="3.2.12.RELEASE" conf="compile,runtime">
 			<artifact name="spring-orm"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-webmvc" rev="2.5.6.SEC03" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-webmvc" rev="3.2.12.RELEASE" conf="compile,runtime">
 			<artifact name="spring-webmvc"/>
 		</dependency>
 		
@@ -159,7 +159,7 @@
 		
 		<!-- Unit test support -->
 		<dependency org="junit" name="junit" rev="4.4" conf="test"/>
-		<dependency org="org.springframework" name="spring-test" rev="2.5.6.SEC03" conf="test">
+		<dependency org="org.springframework" name="spring-test" rev="3.2.12.RELEASE" conf="test">
 			<artifact name="spring-test" />
 		</dependency>
 		<dependency org="org.subethamail" name="subethasmtp" rev="3.1.6" conf="test">
