--- a/ivy.xml
+++ b/ivy.xml
@@ -17,7 +17,7 @@
 		<dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="compile,runtime"/>
 		
 		<!-- Utilities -->
-		<dependency org="net.sf.ehcache" name="ehcache" rev="1.3.0" conf="compile,runtime">
+		<dependency org="net.sf.ehcache" name="ehcache" rev="1.6.2" conf="compile,runtime">
 			<artifact name="ehcache"/>
 		</dependency>
 		<dependency org="gnu-regexp" name="gnu-regexp" rev="1.1.4" conf="compile,runtime"/>
@@ -74,16 +74,21 @@
 		<dependency org="com.drewnoakes" name="metadata-extractor" rev="2.6.2" conf="runtime,test"/>
 		
 		<!-- Lucene -->
-		<dependency org="org.apache.lucene" name="lucene-core" rev="2.2.0" conf="compile,runtime">
+		<dependency org="org.apache.lucene" name="lucene-core" rev="2.4.1" conf="compile,runtime">
     		<artifact name="lucene-core" type="jar" />
 		</dependency>
-		<dependency org="org.apache.lucene" name="lucene-snowball" rev="2.2.0" conf="compile,runtime">
+		<dependency org="org.apache.lucene" name="lucene-snowball" rev="2.4.1" conf="compile,runtime">
 			<artifact name="lucene-snowball" type="jar" />
 		</dependency>
 		
 		<!-- JDBC -->
 		<dependency org="javax.transaction" name="jta" rev="1.0.1B" conf="compile,runtime"/>
-		<dependency org="org.hibernate" name="hibernate" rev="3.2.6.ga" conf="compile,runtime">
+		<dependency org="org.hibernate" name="hibernate-core" rev="3.3.2.GA" >
+    		<artifact name="hibernate-core" type="jar" />
+			<exclude module="ehcache"/>
+		</dependency>
+		<dependency org="org.hibernate" name="hibernate-ehcache" rev="3.3.2.GA" >
+			<artifact name="hibernate-ehcache" type="jar" />
 			<exclude module="ehcache"/>
 		</dependency>
 		<dependency org="org.apache.derby" name="derby" rev="10.8.3.0" conf="test,demo-tomcat,jdbc">
