--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -232,6 +232,10 @@
 		<servlet-name>matte</servlet-name>
 		<url-pattern>*.xml</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>matte</servlet-name>
+		<url-pattern>/api/*</url-pattern>
+	</servlet-mapping>
 	
 	<mime-mapping>
 		<extension>xsd</extension>
