And HttpRequestHandler for theme resources, with mapping of /theme/** so theme resources can be served by simple URLs like /theme/1/foo.js.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -249,6 +249,10 @@
 		<servlet-name>matte</servlet-name>
 		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>matte</servlet-name>
+		<url-pattern>/theme/*</url-pattern>
+	</servlet-mapping>
 	
 	<mime-mapping>
 		<extension>xsd</extension>
