--- a/web/WEB-INF/themes/core/swipe/theme.properties
+++ b/web/WEB-INF/themes/core/swipe/theme.properties
@@ -2,3 +2,4 @@ theme.name=Swipe
 theme.author=Matte Development Team
 theme.created=2015-02-04
 theme.authoremail=matte@noplace
+theme.browseMode.albums.useDateRange=true
