Implement query-level support for year-based sections on default albums browse mode. If "latest" section is specified, then plugin queries for most recent available year and displays those albums. Also populates the index sections with all available years, so the UI can build links as appropriate.

--- a/src/META-INF/AlbumsByDateBrowseModePlugin.properties
+++ b/src/META-INF/AlbumsByDateBrowseModePlugin.properties
@@ -73,13 +73,19 @@ sql.browse.order.child=album.album_album_hjid, album.album_album_hjindex
 # 
 # The .daterange clause accepts these SQL parameters:
 # 
-# 1: starting date
-# 2: ending date
+# 1: starting timestamp
+# 2: ending timestamp
 
 sql.browse.where.feed=and album.allowfeed = ?
 sql.browse.where.browse=and album.allowbrowse = ?
-sql.browse.where.daterange=and date(case when album.albumdate is null \
-	then album.creationdate else album.albumdate end) >= ? \
-	and date(case when album.albumdate is null \
-		then album.creationdate else album.albumdate end) <= ?
+sql.browse.where.daterange=and COALESCE(album.albumdate, album.creationdate) >= ? \
+	and COALESCE(album.albumdate, album.creationdate) < ?
+
+###############################################################################
+# sql.browse.findYears=<sql clause>
+# 
+# SQL statement to find all years, ordered in descending order.
+
+sql.browse.findYears=SELECT DISTINCT CAST(EXTRACT(year FROM COALESCE(albumdate, creationdate)) AS INTEGER) AS year \
+	 FROM album ORDER BY year DESC
 
