Fix year index query to filter on user, allow anonymous, and allow browse.

--- a/src/META-INF/AlbumsByDateBrowseModePlugin.properties
+++ b/src/META-INF/AlbumsByDateBrowseModePlugin.properties
@@ -87,5 +87,10 @@ sql.browse.where.daterange=and COALESCE(album.albumdate, album.creationdate) >= 
 # SQL statement to find all years, ordered in descending order.
 
 sql.browse.findYears=SELECT DISTINCT CAST(EXTRACT(year FROM COALESCE(albumdate, creationdate)) AS INTEGER) AS year \
-	 FROM album ORDER BY year DESC
+	 FROM album WHERE \
+	 	album.owner_ = ? \
+	 	AND album.allowanonymous = ? \
+	 	AND album.allowbrowse = ? \
+	 	AND album.album_album_hjid IS NULL \
+	 ORDER BY year DESC
 
