Start integrating PhotoSwipe into album theme.

--- a/matte-web/web/WEB-INF/themes/core/swipe/theme.properties
+++ b/matte-web/web/WEB-INF/themes/core/swipe/theme.properties
@@ -3,3 +3,4 @@ theme.author=Matte Development Team
 theme.created=2015-02-04
 theme.authoremail=matte@noplace
 theme.browseMode.albums.useDateRange=true
+http.contentType = text/html
