Add "play slideshow" button to album to launch to start of album.

--- a/matte-web/web/WEB-INF/themes/core/swipe/theme-messages.properties
+++ b/matte-web/web/WEB-INF/themes/core/swipe/theme-messages.properties
@@ -1,2 +1,3 @@
 search.results.none = There are no results that match your query.
 search.results.placeholder = Search results will appear here.
+action.playSlideshow = Play
