--- a/matte-web/web/WEB-INF/themes/core/swipe/theme-messages.properties
+++ b/matte-web/web/WEB-INF/themes/core/swipe/theme-messages.properties
@@ -1,3 +1,4 @@
 search.results.none = There are no results that match your query.
 search.results.placeholder = Search results will appear here.
 action.playSlideshow = Play
+action.pauseSlideshow = Pause
