Add example "XML" log file.

--- a/matte-web/environment/example/log4j.properties
+++ b/matte-web/environment/example/log4j.properties
@@ -33,3 +33,14 @@ log4j.appender.defaultAppAppender.MaxBackupIndex=2
 ###########################################################################
 # Special Purpose Appenders
 ###########################################################################
+
+log4j.logger.magoffin.matt.xweb.util.XwebJaxbView=DEBUG, xmlAppender
+log4j.logger.magoffin.matt.ma2.web.util.MatteXwebJaxbView=DEBUG, xmlAppender
+log4j.additivity.magoffin.matt.xweb.util.XwebJaxbView=false
+log4j.additivity.magoffin.matt.ma2.web.util.MatteXwebJaxbView=false
+log4j.appender.xmlAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.xmlAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.xmlAppender.layout.ConversionPattern=(%d{dd MMM yyyy HH:mm:ss}) %m%n
+log4j.appender.xmlAppender.File=/var/tmp/matte-xml.log
+log4j.appender.xmlAppender.MaxFileSize=1MB
+log4j.appender.xmlAppender.MaxBackupIndex=5
