Add Derby SQL for findYears query.

--- a/matte-web/environment/demo/env.properties
+++ b/matte-web/environment/demo/env.properties
@@ -420,3 +420,11 @@ group by case \
 		else 5.0 \
 	end \
 order by avg_rating desc
+
+sql.browse.findYears=SELECT DISTINCT YEAR(COALESCE(albumdate, creationdate)) AS "year" \
+	 FROM album WHERE \
+	 	album.owner_ = ? \
+	 	AND album.allowanonymous = ? \
+	 	AND album.allowbrowse = ? \
+	 	AND album.album_album_hjid IS NULL \
+	 ORDER BY YEAR(COALESCE(albumdate, creationdate)) DESC
