--- a/matte-web/ivy.xml
+++ b/matte-web/ivy.xml
@@ -29,7 +29,7 @@
 			<artifact name="ehcache"/>
 		</dependency>
 		<dependency org="gnu-regexp" name="gnu-regexp" rev="1.1.4"/>
-		<dependency org="javax.activation" name="activation" rev="1.1.1"/>
+		<dependency org="javax.activation" name="activation" rev="1.1.1" conf="compile,demo-tomcat"/>
 		<dependency org="cglib" name="cglib" rev="2.2.2"/>
 		<dependency org="org.bouncycastle" name="bcprov-jdk14" rev="1.43"/>
 		<dependency org="rhino" name="js" rev="1.7R2"/>
@@ -142,7 +142,7 @@
 		
 		
 		<!-- Web runtime -->
-		<dependency org="javax.mail" name="mail" rev="1.4.7" conf="compile">
+		<dependency org="javax.mail" name="mail" rev="1.4.7" conf="compile,demo-tomcat">
 			<artifact name="mail"/>
 		</dependency>
 		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="compile,runtime"/>
