Make sure virtual albums return width/height values so PhotoSwipe works properly.

--- a/matte-web/src/META-INF/RatingAverageBrowseModePlugin.properties
+++ b/matte-web/src/META-INF/RatingAverageBrowseModePlugin.properties
@@ -1,7 +1,6 @@
 ###############################################################################
 # Defaults settings for RatingAverageBrowseModePlugin
 # These can be over-ridden in env.properties.
-# $Id$
 ###############################################################################
 
 ###############################################################################
@@ -67,7 +66,7 @@ order by avg_rating desc
 # 5: rating section, the rating section (float) again
 
 sql.avgrate.section=select item.itemid as item_id, item.name_ as item_name, \
-item.mime as item_mime, \
+item.mime as item_mime, item.width as item_width, item.height as item_height, \
 agg.avg_rating as avg_rating \
 from media_item item \
 inner join ( \
