--- a/matte-web/src/META-INF/PopularityBrowseModePlugin.properties
+++ b/matte-web/src/META-INF/PopularityBrowseModePlugin.properties
@@ -1,7 +1,6 @@
 ###############################################################################
 # Defaults settings for PopularityBrowseModePlugin
 # These can be over-ridden in env.properties.
-# $Id$
 ###############################################################################
 
 ###############################################################################
@@ -57,7 +56,7 @@ order by bucket desc
 # 5: integer popularity upper bound (exclusive)
 
 sql.popularity.section=select item.itemid as item_id, item.name_ as item_name,  \
-item.mime as item_mime \
+item.mime as item_mime, item.width as item_width, item.height as item_height \
 from media_item item \
 inner join ( \
 	select mi.itemid as sitemid \
