Make default media view settings configurable.

--- a/matte-web/environment/example/env.properties
+++ b/matte-web/environment/example/env.properties
@@ -96,6 +96,20 @@ resource.path=/var/matte/resources
 
 
 ###############################################################################
+# media.default.thumb.quality <MediaQuality>
+# media.default.thumb.size    <MediaSize>
+# media.default.view.quality  <MediaQuality>
+# media.default.view.size     <MediaSize>
+# 
+# The default thumb/view media quality and size settings to use.
+
+media.default.thumb.quality = GOOD
+media.default.thumb.size    = THUMB_NORMAL
+media.default.view.quality  = GOOD
+media.default.view.size     = NORMAL
+
+
+###############################################################################
 # xslt.cache <boolean>
 # 
 # Set to 'false' to help debug XSLT changes, so each request to an XSLT view
