--- a/build.gradle
+++ b/build.gradle
@@ -44,11 +44,14 @@ configurations {
 	all*.exclude group: 'org.apache.geronimo.specs'
 	all*.exclude module: 'avalon-framework'
 	all*.exclude module: 'ehcache-terracotta'
+	all*.exclude module: 'hibernate'
 	all*.exclude module: 'jaxen'
 	all*.exclude module: 'jaxp-api'
 	all*.exclude module: 'jaxrpc-api'
 	all*.exclude module: 'jaxws-api'
 	all*.exclude module: 'jsr173_api'
+	all*.exclude module: 'saxon'
+	all*.exclude module: 'saxon-dom'
 	all*.exclude module: 'spring'
 	all*.exclude module: 'woodstox-core-asl'
 	all*.exclude module: 'xalan'
@@ -79,7 +82,7 @@ dependencies {
 	implementation 'commons-collections:commons-collections:3.2.1'
 	implementation 'commons-el:commons-el:1.0'
 	implementation 'commons-fileupload:commons-fileupload:1.3.2'
-	implementation 'commons-httpclient:commons-httpclient:3.1'
+	providedCompile 'commons-httpclient:commons-httpclient:3.1'
 	implementation 'commons-io:commons-io:1.4'
 	implementation 'commons-lang:commons-lang:2.2'
 	implementation 'commons-pool:commons-pool:1.2'
@@ -96,7 +99,11 @@ dependencies {
 	implementation 'dom4j:dom4j:1.6.1'
 	implementation 'net.sf.saxon:Saxon-HE:9.6.0-3'
 	implementation 'org.codehaus.woodstox:wstx-asl:3.2.9'
-	implementation 'javax.xml.bind:jaxb-api:1.0'
+	implementation('javax.xml.bind:jaxb-api') {
+		version {
+			strictly '1.0'
+		}
+	}
 	implementation 'com.sun.xml.bind:jaxb-impl:1.0.6'
 	implementation 'org.jvnet.jaxbcommons:jaxbcommons-core:1.0.4.7'
 	implementation 'org.jvnet.hyperjaxb2:hyperjaxb2-core:0.6.5'
@@ -125,9 +132,9 @@ dependencies {
 	implementation 'javax.transaction:jta:1.0.1B'
 	implementation 'org.hibernate:hibernate-core:3.3.2.GA'
 	implementation 'org.hibernate:hibernate-ehcache:3.3.2.GA'
-	implementation 'org.apache.derby:derby:10.8.3.0'
-	implementation 'mysql:mysql-connector-java:5.1.18'
-	implementation 'org.postgresql:postgresql:42.0.0.jre7'
+	testImplementation 'org.apache.derby:derby:10.8.3.0'
+	testImplementation 'mysql:mysql-connector-java:5.1.18'
+	testImplementation 'org.postgresql:postgresql:42.0.0.jre7'
 	
 	// Services
 	implementation 'opensymphony:quartz:1.6.3'
@@ -142,11 +149,11 @@ dependencies {
 	implementation "org.springframework:spring-webmvc:${springVersion}"
 	
 	// Web
-	implementation 'javax.mail:mail:1.4.7'
+	providedCompile 'javax.mail:mail:1.4.7'
 	implementation 'javax.servlet:jstl:1.2'
-	implementation 'org.apache.taglibs:taglibs-standard-impl:1.2.1'
-	implementation 'javax.servlet.jsp:jsp-api:2.1'
-	implementation 'javax.servlet:servlet-api:2.5'
+	runtimeOnly 'org.apache.taglibs:taglibs-standard-impl:1.2.1'
+	providedCompile 'javax.servlet.jsp:jsp-api:2.1'
+	providedCompile 'javax.servlet:servlet-api:2.5'
 
 	// Web Service
 	implementation 'org.apache.ws.commons.axiom:axiom-impl:1.2.9'
